# decentralized-automation-networks_esp32-input-node

./: .gitignore  Cargo.toml  cfg.example.toml  readme.md  sdkconfig.defaults
src/: main.rs  wifi.rs
